--- a/module2_rmd1.Rmd
+++ b/module2_rmd1.Rmd
@@ -3,9 +3,9 @@ title: "module2 - R Markdown Document 1"
 author: "Magda G."
 date: "20 lutego 2018"
 output:
+  word_document: default
   pdf_document: default
   html_document: default
-  word_document: default
 ---
 
 ```{r setup, include=FALSE}
@@ -104,3 +104,19 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+```{r pressure2, fig.width=5, fig.height=5, echo=FALSE}
+plot(pressure)
+```
+
+## Insert tables
+
+```{r}
+knitr::kable(head(cars),
+             caption = "Top 6 rows of Cars Dataset")
+```
+
+## Insert an equation
+
+$$ Y = \beta_0 + \beta_1x $$
