--- a/module2_rmd1.Rmd
+++ b/module2_rmd1.Rmd
@@ -120,3 +120,24 @@ knitr::kable(head(cars),
 ## Insert an equation
 
 $$ Y = \beta_0 + \beta_1x $$
+
+## Insert images
+
+Here is an image inserted
+
+![sunstar](sunstar.png)
+
+## Insert an Animated GIF and Video
+
+![sunstar](sunstar.gif)
+
+![sunstar](sunstar.mp4)
+
+## Insert text with some footnotes
+
+Here is a footnote reference [^1] and another [^longnote]
+
+Here is an inline footnote ^[Inlines notes are easier to write, since you don't have to pick an identifier and move down to type the note.]
+
+[^1]: Here is the footnote.
+[^longnote]: Here's one with multiple blocks.
